doc: 购票逻辑